# kaggle-Mania

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
baseline/: train.py
baseline/docs/: evaluation_metrics.md  methodology.md  model_design.md
baseline/output/: metrics.txt  model.lgb  train_features.csv
docs/: analysis_report.md  data_dictionary.md  data_usage_plan.md  domain_knowledge.md  eda.md  past_solutions_survey.md
experiments/: baseline_lgbm.py  baseline_logistic.py  calibration_experiment.py  coach_experiment_v2.py  elo_baseline.py  elo_optimized.py  ensemble_experiment.py  final_ensemble_submission.py  gold_medal_mike_kim.py  massey_baseline.py  postprocess_submission.py  team_rating_experiment.py
framework/: README.md  __init__.py  config.py  cv.py  data_loader.py  evaluation.py  runner.py
framework/features/: __init__.py  base.py  coach.py  elo.py  massey.py  matchup_rating.py  recent_form.py  season_stats.py  seed_diff.py  team_rating.py
framework/models/: __init__.py  base.py  calibrated.py  elo_predictor.py  lightgbm_model.py  logistic.py  ridge_model.py
reference/: gold-medal-solution-mike-kim.ipynb
submission/: metrics.txt  oof_predictions.csv  submission.csv
