[project]
name = "mania"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.1",
    "numpy>=2.0.0",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.5.0",
    "optuna>=4.8.0",
    "xgboost>=3.2.0",
    "statsmodels>=0.14.6",
]
